crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__block_must_end_in_expression.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"t\" = do\n        x <- e\n"
info: diagnostic
---
nash::syntax

  × A do block must end with an expression.
   ╭─[src/Main.nash:5:9]
 4 │     test "t" = do
 5 │         x <- e
   ·         ─
   ╰────
  help: Add a final expression after this binding.
