crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__budget_kinds_cannot_repeat.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"t\" within (cpu 1, cpu 2) = do\n        assert True\n"
---
Tests(
    Test(
        WithinDuplicate(
            4,
            29,
        ),
        4,
        5,
    ),
    3,
    1,
)
