crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__name_must_be_string.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test name = do\n        assert True\n"
info: diagnostic
---
nash::syntax

  × Expected a quoted test name.
   ╭─[src/Main.nash:4:10]
 3 │ tests
 4 │     test name = do
   ·          ─
 5 │         assert True
   ╰────
  help: Give the test a name in double quotes.
