crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__nested_monadic_do_in_test_block.snap
---
source: crates/nash-parse/src/tests_block.rs
assertion_line: 356
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"nested do\" = do\n        r <- do\n            x <- action\n            pure x\n        assert r\n"
---
Module {
    kind: Normal,
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 9,
                column: 1,
            },
        },
    ),
    comments: [],
    imports: [],
    values: [],
    unions: [],
    aliases: [],
    traits: [],
    impls: [],
    tests: Some(
        Tests {
            imports: [],
            tests: [
                Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 5,
                        },
                        end: Position {
                            line: 8,
                            column: 17,
                        },
                    },
                    value: Test {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 10,
                                },
                                end: Position {
                                    line: 4,
                                    column: 21,
                                },
                            },
                            value: "nested do",
                        },
                        expect: Pass,
                        budget: None,
                        body: Unit(
                            Block {
                                stmts: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 7,
                                                column: 19,
                                            },
                                        },
                                        value: Bind {
                                            pattern: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 5,
                                                        column: 9,
                                                    },
                                                    end: Position {
                                                        line: 5,
                                                        column: 10,
                                                    },
                                                },
                                                value: Var(
                                                    "r",
                                                ),
                                            },
                                            expr: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 5,
                                                        column: 14,
                                                    },
                                                    end: Position {
                                                        line: 7,
                                                        column: 19,
                                                    },
                                                },
                                                value: Do {
                                                    stmts: [
                                                        Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 6,
                                                                    column: 13,
                                                                },
                                                                end: Position {
                                                                    line: 6,
                                                                    column: 24,
                                                                },
                                                            },
                                                            value: Bind {
                                                                pattern: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 6,
                                                                            column: 13,
                                                                        },
                                                                        end: Position {
                                                                            line: 6,
                                                                            column: 14,
                                                                        },
                                                                    },
                                                                    value: Var(
                                                                        "x",
                                                                    ),
                                                                },
                                                                expr: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 6,
                                                                            column: 18,
                                                                        },
                                                                        end: Position {
                                                                            line: 6,
                                                                            column: 24,
                                                                        },
                                                                    },
                                                                    value: Var {
                                                                        kind: LowVar,
                                                                        name: "action",
                                                                    },
                                                                },
                                                            },
                                                        },
                                                    ],
                                                    last: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 7,
                                                                column: 13,
                                                            },
                                                            end: Position {
                                                                line: 7,
                                                                column: 19,
                                                            },
                                                        },
                                                        value: Call {
                                                            function: Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 7,
                                                                        column: 13,
                                                                    },
                                                                    end: Position {
                                                                        line: 7,
                                                                        column: 17,
                                                                    },
                                                                },
                                                                value: Var {
                                                                    kind: LowVar,
                                                                    name: "pure",
                                                                },
                                                            },
                                                            arguments: [
                                                                Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 7,
                                                                            column: 18,
                                                                        },
                                                                        end: Position {
                                                                            line: 7,
                                                                            column: 19,
                                                                        },
                                                                    },
                                                                    value: Var {
                                                                        kind: LowVar,
                                                                        name: "x",
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                    },
                                                },
                                            },
                                        },
                                    },
                                ],
                                last: Located {
                                    region: Region {
                                        start: Position {
                                            line: 8,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 8,
                                            column: 17,
                                        },
                                    },
                                    value: Assert(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 8,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 8,
                                                    column: 17,
                                                },
                                            },
                                            value: Var {
                                                kind: LowVar,
                                                name: "r",
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ],
        },
    ),
    binops: [],
}
