crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__once_is_invalid_on_unit_test.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"t\" fail once = do\n        assert True\n"
info: diagnostic
---
nash::syntax

  × Unit tests already run once.
   ╭─[src/Main.nash:4:19]
 3 │ tests
 4 │     test "t" fail once = do
   ·                   ─
 5 │         assert True
   ╰────
  help: Remove `once`, or use a property declaration for generated inputs.
