crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__property_binder_requires_via.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    prop \"p\" = let x = int in x\n"
info: diagnostic
---
nash::syntax

  × Expected `via` after the input pattern.
   ╭─[src/Main.nash:4:22]
 3 │ tests
 4 │     prop "p" = let x = int in x
   ·                      ─
   ╰────
  help: Add `via` followed by the generator expression.
