crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__property_requires_at_least_one_binder.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    prop \"p\" = let in do\n        assert True\n"
info: diagnostic
---
nash::syntax

  × Reserved word `in` cannot be a pattern variable.
   ╭─[src/Main.nash:4:20]
 3 │ tests
 4 │     prop "p" = let in do
   ·                    ──
 5 │         assert True
   ╰────
  help: Choose another name.
