crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__property_requires_let.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    prop \"p\" = assert True\n"
info: diagnostic
---
nash::syntax

  × Expected generated inputs for the property.
   ╭─[src/Main.nash:4:16]
 3 │ tests
 4 │     prop "p" = assert True
   ·                ─
   ╰────
  help: Write `let pattern via generator` before `in`.
