crates/nash-parse/src/snapshots/nash_parse__tests_block__tests__tests_block_must_be_last.snap
---
source: crates/nash-parse/src/tests_block.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\nx = 1\n"
---
BadEnd(
    4,
    1,
)
